; ModuleID = '/home/carl/AnghaBench/darwin-xnu/san/extr_kasan-arm64.c_align_to_page.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/san/extr_kasan-arm64.c_align_to_page.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ARM_PGMASK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i64*, i64*)* @align_to_page to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @align_to_page(i64* %0, i64* %1) #0 {
  %3 = alloca i64*, align 8
  %4 = alloca i64*, align 8
  %5 = alloca i64, align 8
  store i64* %0, i64** %3, align 8
  store i64* %1, i64** %4, align 8
  %6 = load i64*, i64** %3, align 8
  %7 = load i64, i64* %6, align 8
  %8 = load i32, i32* @ARM_PGMASK, align 4
  %9 = call i64 @vm_map_trunc_page(i64 %7, i32 %8)
  store i64 %9, i64* %5, align 8
  %10 = load i64*, i64** %4, align 8
  %11 = load i64, i64* %10, align 8
  %12 = load i64*, i64** %3, align 8
  %13 = load i64, i64* %12, align 8
  %14 = load i64, i64* %5, align 8
  %15 = sub nsw i64 %13, %14
  %16 = add nsw i64 %11, %15
  %17 = load i32, i32* @ARM_PGMASK, align 4
  %18 = call i64 @vm_map_round_page(i64 %16, i32 %17)
  %19 = load i64*, i64** %4, align 8
  store i64 %18, i64* %19, align 8
  %20 = load i64, i64* %5, align 8
  %21 = load i64*, i64** %3, align 8
  store i64 %20, i64* %21, align 8
  ret void
}

declare dso_local i64 @vm_map_trunc_page(i64, i32) #1

declare dso_local i64 @vm_map_round_page(i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
